[package]
name = "rgb2ansi256_bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ansi_colours = "=1.0.4"
criterion = "0.3"
rgb2ansi256 = { path = ".." }

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
